replaced zero font size inline-block whitespace fix with letter spacing fix

--- a/assets/styles/_form.scss
+++ b/assets/styles/_form.scss
@@ -14,10 +14,10 @@
 form {
     @include paragraph;
     
-    font-size: 0;
+    letter-spacing: -1em;
 
     > * {
-        font-size: $font-size-small;
+        letter-spacing: normal;
     }
 }
 
